--- a/FrontEndAssignment.css
+++ b/FrontEndAssignment.css
@@ -1,79 +1,126 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,  
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+
 body {
-  margin: 0px auto 0px auto;
+  width:100%;
+  margin: 0px 0px 0px 0px;
+}
+
+
+
+.container1{
+ width:1170px;
+ margin:0px auto 0px auto;
+
+}
+
+
+.clear{
+  clear:both;
+}
+
+
+.head{
+  padding:7.5px 0px;
+  
+  background-color:#aaaaaa;
+
 }
 
 .logo {
-  margin-top: 7.5px;
-  margin-bottom: 7.5px;
+
   float: left;
   background-color:#ff8000; 
   width: 140px;
   height: 35px;
-  margin-left: 15%;
-}
-
-.clear{
-	clear:both;
-}
-
-.head{
-	background-color:#aaaaaa;
-    background-repeat: repeat;
-}
-
-
-
-
-.nav{
-  float: left;
-}
-
-.nav li {
-  margin-left: 15px;
-  margin-right: 15px;
-  list-style: none;
-  float: left;
   
 }
 
+.nav{
+   text-align: center;
+}
+
+
+.nav li {
+
+  margin-left: 15px;
+  margin-right: 15px;
+  list-style: none;
+  display: inline-block;
+}
+
 .nav li a {
-  color: #00000;
+  line-height: 35px;
+  color: #000000;
   font-size: 18px;
+
 }
 
 .canvas {
-  width: 100%;
   height: 485px;
   background-color: #71c4ea;
 }
 
 .content {
-  margin-top: 64px;
-  margin-bottom: 110px;
-  margin-left: 175px;
+  margin-top: 63px;
+  margin-bottom: 109px;
+  text-align:center;
+}
+
+.container2{
+ width:1170px;
+ margin:0px auto 0px auto;
+  
 }
 
 h1{
+  text-align: center;
   font-size: 36px;
+  line-height: 38px;
   color: #444444;
-  text-align:center;
-  margin-bottom: 70px;
+  margin-bottom: 69px;
 }
 
 
 .description {
   list-style: none;
+  width: 860px;
+  margin:0 auto;
 }
 
 .description li {
-  
+  width:140px;
+  text-align: center;  
   margin-left: 75px;
   float: left;
 }
 
+.description li:first-child {
+  
+  margin-left: 0px;
+  float: left;
+}
 
 .circle {
-
   background-color: #efefef;
   width: 140px;
   height: 140px;
@@ -82,32 +129,34 @@ h1{
 }
 
 .about {	
+
   color: #888888;
   font-size: 18px;
+  line-height: 20px;
 }
 
-.about3 {	
-  color: #000000;
-  font-size: 18px;
+
+.container3{
+
+ width:1170px;
+ margin:0px auto 0px auto;
+
 }
 
 .footer {
   background-color: #ececec;
 }
 
-.footer .nav {
-  float: left;
-  margin-left: 350px;
-}
+.footer .nav { 
+  text-align:center;
 
-.footer .nav li {
-  margin-left: 15px;
-  margin-right: 15px;
 }
-
- .nav li a {
-  color: #ff8000;
+  
+ .footer .nav li a {
+  float:left;
   font-size: 16px;
+  color:#ff8000;
+  display: inline-block;
   
 }
 
