--- a/FrontEndAssignment.css
+++ b/FrontEndAssignment.css
@@ -19,13 +19,7 @@ time, mark, audio, video {
 }
 
 
-.container1{
- width:1170px;
- margin:0px auto 0px auto;
-
-}
-
-.containerc{
+.container{
  width:1170px;
  margin:0px auto 0px auto;
 
@@ -37,10 +31,12 @@ time, mark, audio, video {
 }
 
 
+
+
+
 .head{
   padding:7.5px 0px;
-  
-  background-color:#aaaaaa;
+  background-color:grey;
 
 }
 
@@ -50,6 +46,7 @@ time, mark, audio, video {
   background-color:#ff8000; 
   width: 140px;
   height: 35px;
+  margin-right:40px;
   
 }
 
@@ -61,17 +58,16 @@ time, mark, audio, video {
 
 .nav li {
 
-
-  margin-left: 15px;
-  margin-right: 15px;
+  float:left;
+  margin-right: 17.5px;
   list-style: none;
-  display: inline-block;
+  
 }
 
 .nav li a {
   text-decoration:none;
   line-height: 35px;
-  color: #000000;
+  color: #aaaaaa;
   font-size: 18px;
 
 }
@@ -85,12 +81,6 @@ time, mark, audio, video {
   margin-top: 63px;
   margin-bottom: 109px;
   text-align:center;
-}
-
-.container2{
- width:1170px;
- margin:0px auto 0px auto;
-  
 }
 
 h1{
@@ -118,10 +108,10 @@ h1{
 .description li:first-child {
   
   margin-left: 0px;
-  float: left;
 }
 
 .circle {
+  margin:0 auto 0 auto;
   background-color: #efefef;
   width: 140px;
   height: 140px;
@@ -129,44 +119,41 @@ h1{
  
 }
 
-.about {	
+.about {  
 
   color: #888888;
   font-size: 18px;
   line-height: 20px;
 }
-
-
-.container3{
-
- width:1170px;
- margin:0px auto 0px auto;
-
+.clearr{
+margin:auto;
+width:0px;
+float:none;
 }
 
-.footer {
-  background-color: #ececec;
+.footer{
+background-color:#ececec;
+text-align: center;
+margin-top: 100px;
+padding-top: 12.5px;
+padding-bottom  : 12.5px;
 }
-
-.footer .nav { 
-  text-align:center;
-
+.footer ul{
+text-align: center;
 }
-  
- .footer .nav li a {
-  float:left;
-  font-size: 16px;
-  color:#ff8000;
-  display: inline-block;
-  
+.footer ul li{
+display: inline-block;
+margin-left: 8px;
+margin-right: 8px;
 }
-
-.footer .nav li a:hover {
-  color: #444444;
+.footer ul li a{
+text-decoration: none;
+font-size: 16px;
+color: #ff8000;
 }
-
-
-
+.footer ul li a:hover{
+color: #444444;
+}
 
 
 
