--- a/frontend1/css/assgn.css
+++ b/frontend1/css/assgn.css
@@ -20,11 +20,12 @@ body {
 
 
 .nav-header .navbar-nav li a {
-color: white;
 
+    color: white;
     font-size: 15px; 
     padding-top: 0px;
     padding-bottom: 0px;
+    line-height: 25px;
     
 }
 
