--- a/frontend1/css/assgn.css
+++ b/frontend1/css/assgn.css
@@ -5,37 +5,27 @@ body {
 }
 
 
-.header {
-    height: 80px;
-}
+
 
 
 .logo {
    
     display: inline-block;
-    margin-top:10px;
+padding-top:10px;
   
 }
 
-
-
 .nav-header .navbar-nav li a {
-
-    color: white;
+color: white;
     font-size: 15px; 
     padding-top: 0px;
     padding-bottom: 0px;
-    line-height: 25px;
-    
+    line-height: 30px;
 }
 
-.nav-header .form-control {
-    height: 25px;
-}
 
-.nav-header .btn {
-    height: 25px;
-}
+
+
 .nav-header .navbar-form {
     margin: 0px;
     padding: 0px;
@@ -51,8 +41,8 @@ body {
 
 
 .nav-header {
-padding-top: 7.5px;
-    padding-bottom: 7.5px;
+padding-top: 5px;
+    padding-bottom: 5px;
     background-color: #3355aa;
     border-radius: 0px;
     margin-bottom: 35px;
@@ -80,18 +70,23 @@ font-size: 16px;
 }
 
 .intro-panel p {
-    font-weight: bold;
-    
+   
 }
-
+.title{
+margin: 0 auto;
+text-align : center;
+}
 
 .introduction {
     margin-bottom: 45px;
-}	
+}   
 
-
+.intro-heading p{
+text-align:center;
+}
 .sectors {
    
+    background-color:#d3d3d3;
     padding-top: 25px;
     padding-bottom: 75px;
 }
@@ -110,11 +105,7 @@ font-size: 16px;
     height: 250px;
     background-color: grey;
 }
-/*.title{
-padding-top:10px;
-padding-bottom:10px;
-}
-*/
+
 
 .footer {
     background-color: #333333;
@@ -126,8 +117,4 @@ padding-bottom:10px;
     background-color: #333333;
     color : white;
     border-bottom: 1px solid #3d3d3d;
-}
-
-.nav-footer li a {
-    color: white;
 }
